# crates-registry

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  build.rs  docker-compose.yml
.github/workflows/: docker-image.yml
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Home.tsx  Layout.tsx  LoadPackedFile.tsx  ManageInstallations.tsx  PlatformsDropdown.tsx  RustVersionsList.tsx
src/: cli.rs  download.rs  index.rs  lib.rs  main.rs  pack.rs  publish.rs  rustup.rs  serve.rs  serve_frontend.rs
tests/: end-to-end.rs
