[package]
name = "crates-registry"
version = "0.1.1"
authors = ["Tal Y Roni <tal.inon.16@gmail.com>"]
edition = "2021"
rust-version = "1.67"
license = "GPL-3.0-or-later"
homepage = "https://gitlab.com/TalRoni/crates-registry"
repository = "https://gitlab.com/TalRoni/crates-registry.git"
readme = "README.md"
description = """
Crates Registry is a tool for serve crates and rustup installation in offline networks.
The project is based on panamax project and cargo-http-registry and use theis code.
"""
include = ["/frontend/build", "/src", "build.rs"]

[dependencies]
anyhow = "1.0"
git2 = {version = "0.17"}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
sha2 = {version = "0.10"}
clap = { version = "4.1", features = ["derive"] }
tokio = {version = "1.25", default-features = false, features = ["full"]}
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt"]}
warp = "0.3"
reqwest = "0.11"
indicatif = "0.17"
log = "0.4"
futures = "0.3"
thiserror = "1.0"
toml = "0.7"
tar = "0.4"
flate2 = "1.0"
tempfile = {version = "3.1"}
env_logger = "0.10"
bytes = "1.4"
itertools = "0.11"
include_dir = "0.7"
smolset = "1.3"
glob = "0.3"
